[gd_scene load_steps=10 format=2]

[ext_resource path="res://Monsters/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/slime.png" type="Texture" id=2]
[ext_resource path="res://Monsters/Slime.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 1 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KillArea/CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KillArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Explode"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KillArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KillArea/CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 2 )

[sub_resource type="RayShape2D" id=4]
length = 30.0

[node name="Slime" instance=ExtResource( 1 )]
collision_layer = 2147483649
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -4 )
texture = ExtResource( 2 )
flip_h = true
vframes = 2
hframes = 4

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Walk"
anims/Attack = SubResource( 5 )
anims/Explode = SubResource( 6 )
anims/Walk = SubResource( 2 )

[node name="FloorLeft" type="RayCast2D" parent="." index="3"]
visible = false
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="FloorRight" type="RayCast2D" parent="." index="4"]
visible = false
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="WallRight" type="RayCast2D" parent="." index="5"]
visible = false
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 3, 0 )

[node name="WallLeft" type="RayCast2D" parent="." index="6"]
visible = false
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( -3, 0 )

[node name="CollisionShape2D" parent="KillArea" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 2

[node name="VisionRay" type="CollisionShape2D" parent="AttackArea" index="0"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 4 )
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]

[editable path="KillArea"]
